<resources>
    <string name="app_name">Permission Auditor</string>
    <string name="scan_title">Permission Auditor</string>
    <string name="scan_subtitle">Analise a segurança dos seus apps</string>
    <string name="btn_start_scan">INICIAR ESCANEAMENTO</string>
    <string name="scanning_label">Analisando…</string>
    <string name="scan_complete">Análise concluída</string>
    <string name="result_title">Resultado da Análise</string>
    <string name="score_vulnerable">Vulnerável</string>
    <string name="score_moderate">Moderado</string>
    <string name="score_safe">Seguro</string>
    <string name="vpn_active">VPN Ativa</string>
    <string name="vpn_inactive">VPN Inativa</string>
    <string name="filter_all">Todos</string>
    <string name="filter_high">Alto Risco</string>
    <string name="filter_medium">Médio</string>
    <string name="filter_safe">Seguros</string>
    <string name="btn_see_details">Ver detalhes</string>
    <string name="btn_open_settings">Abrir Configurações</string>
    <string name="detail_permissions_title">Permissões declaradas</string>
    <string name="risk_critical">CRÍTICO</string>
    <string name="critical_alert_label">Risco máximo detectado</string>
    <string name="risk_high">ALTO</string>
    <string name="risk_medium">MÉDIO</string>
    <string name="risk_low">BAIXO</string>
    <string name="malicious_app_risk_label">Em um app malicioso:</string>
    <string name="dialog_rescan_title">Refazer análise?</string>
    <string name="dialog_rescan_message">Deseja iniciar um novo escaneamento dos seus aplicativos?</string>
    <string name="dialog_rescan_yes">Sim, reiniciar</string>
    <string name="dialog_rescan_no">Não</string>
    <string name="score_label">Score de segurança</string>
    <string name="apps_analyzed">apps analisados</string>
    <string name="global_score_label">Score Global do Dispositivo</string>
    <string name="scan_error">Erro ao escanear apps.</string>
    <string name="more_permissions">+%d mais permissões</string>
    <string name="language_select_title">Idioma</string>
    <string name="language_pt_br">Português (Brasil)</string>
    <string name="language_en">English</string>
    <string name="permission_granted">Concedida</string>
    <string name="permission_denied">Negada</string>
    <string name="filter_granted_only">Só Concedidas</string>
</resources>
